
* XINS/Java Server Framework:
  - Removed the getCallResult() method from CallContext as it's not used.
  - Bootstrap exception and Throwable are handled in a similar way.
  - Removed some TODOs that are no longer relevant.
  - Check the state of API and APIServlet before calling a method.
  - Used another system to suspend any call to an API when the statistics
    are reset.

* XINS/Java Common Library:
  - Small refactoring in ServiceCaller.doCall(Object) that should have no
    impact on behaviour.
  - Fixed argument for log message 3312. Now actually sending the URL instead
    of the textual representation of the TargetDescriptor.
  - Minor change to translation of log messages 3312 and 3313.
  - Narrowed the definition of a service caller to TCP-based services.
  - Changed the interface and rewrote the implementation of the service caller
    framework in package org.xins.common.service.
  - Removed deprecated method execute(Thread,int) from class
    TimeOutController.
  - Removed TODO entries that are done or no longer relevant.
  - Added more logs for the Doorman.
  - The Properties type now returns a PropectedPropertyReader instead of the
    BasicPropertyReader.
  - Removed method serialize(PropertyReader,LogdocStringBuffer) from class
    PropertyReaderUtils and replaced it with
    serialize(PropertyReader,FastStringBuffer,String). The former was not used
    anywhere.

* XINS/Java Client Framework:
  - Added some Javadoc to the ResultParser class.
  - Using the new service caller framework.
  - Supporting checking of HTTP status codes.

* Logdoc
  - An error is thrown when you register a log that doesn't support the
    current locale.
  - Changed levels for log message entry 1404 from INFO to DEBUG.

* Generated java code:
  - Removed unused imports in the generated APIImpl.java.
  - Fixed some unused variable that conflicted with existing one that had the
    same name using the JDK 1.5.