@@ -6,12 +6,12 @@
 	</head>
 	<body bgcolor="white">
 		<center>
-			<font color="#8888dd" size="8">XINS</font><br>
-			<font color="#8888dd" size="5">XML Interface for Network Services</font>
+			<font color="#5555aa" size="8">XINS</font><br>
+			<font color="#5555aa" size="5">XML Interface for Network Services</font>
 		</center>
 
 		<p>
-		<font color="#8888dd" size="4">Description:</font>
+		<font color="#5555aa" size="4">Description:</font>
 		<ul>
 			<li>XINS is a web application framework.</li>
 			<li>XINS is design to be able to create web applications based on defined specifications.</li>
@@ -23,7 +23,7 @@
 		</ul>
 
 		<p>
-		<font color="#8888dd" size="4">Documentation:</font>
+		<font color="#5555aa" size="4">Documentation:</font>
 		<ul>
 			<li>XINS User Guide in <a href="docs/index.html">HTML</a> and <a href="docs/XINSGuide">PDF</a>.</li>
 			<li><a href="docs/javadoc/index.html">Javadoc</a> (<a href="docs/javadoc/overview-summary.html">no frames</a>).</li>
@@ -34,7 +34,7 @@
 		</ul>
 
 		<p>
-		<font color="#8888dd" size="4">Quick start:</font>
+		<font color="#5555aa" size="4">Quick start:</font>
 		<ul>
 			<li>Check that <a href="http://java.sun.com/j2se/1.4.2/download.html">Java</a>, <a href="http://ant.apache.org/">ANT</a> and <a href="http://www.mortbay.org/jetty/index.html">Jetty</a> are properly installed.<br>
 			    Note that any other application server such as <a href="http://jakarta.apache.org/tomcat/">Tomcat</a> or <a href="http://www.orionserver.com/">Orion</a> could replace Jetty.</li>
@@ -43,12 +43,12 @@
 			<li>In the <i>demo\xins-projects</i> directory execute <i>xins all-myproject</i>.</li>
 			<li>Start Jetty in the same directory with with<br>
 			    <i>java -Dorg.xins.server.config=..\xins.properties -Djetty.home=%JETTY_HOME% -jar %JETTY_HOME%\start.jar ..\jetty_myproject.xml</i>.</li>
-			<li>Run your browser to the web page <a href="demo\xins-project\specdocs\myproject\index.html">demo\xins-project\specdocs\myproject\index.html</a></li>
+			<li>Run your browser to the web page <a href="demo/xins-project/specdocs/myproject/index.html">demo/xins-project/specdocs/myproject/index.html</a></li>
 		</ul>
 		<i>More detailed information can be found in the <a href="docs/index.html">Documentation</a>.</i>
 
 		<P>
-		<font color="#8888dd" size="4">links:</font>
+		<font color="#5555aa" size="4">links:</font>
 		<ul>
 			<li><a href="http://www.xins.org">Web site</a>.</li>
 			<li><a href="http://xins.sf.net/demo.html">On line demo</a>.</li>
